--- a/mcs275-L23-A.html
+++ b/mcs275-L23-A.html
@@ -8,7 +8,7 @@
 <link href= "index.css" type= "text/css" rel= "stylesheet"/>
 
 <!--title of the webpage; appears on top of the browser-->
-<title>Overview of HTML Website</title>
+<title>Welcome to my personal site!</title>
 <!-- ending the head component of the website-->
 </head>
 
@@ -17,7 +17,7 @@
 
 <!--div stands for division(like subdivision or component) there are usually many division elements in an html file.-->
   <div id = "header"> <!--we are giving the header component an id name for css identification purpose-->
-    <h1> HTML Resources </h1>  <!--h1 denotes the font size-->
+    <h1> Here is some of my work! </h1>  <!--h1 denotes the font size-->
     <div id = "menu">
       <ul>
         <li> <b><a href = "https://developer.mozilla.org/en-US/docs/Web/HTML"> HTML5 Tutorial </a> </b> </li>
@@ -32,22 +32,22 @@
   <div id = "content">
     <div id = "feature">
       <p> <h3>Features </h3> </p>
-      <p> Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web applications. By using Cascading Style Sheets (CSS), we can enhance the appreance of websites. Adding JavaScript enhances the functionality of website. All combined, they are the technological framework for the World Wide Web.</p>
+      <p> </p>
     </div>
 
     <div class  = "article column1">  <!-- div class "name" specifies a container-->
-      <p> <h3> CSS </h3> </p>
-      <p> CSS description</p>  
+      <p> <h3> Projects </h3> </p>
+      <p> Projects </p>  
     </div>
 
     <div class  = "article column2">
-      <p> <h3> JavaScript </h3> </p>
-      <p> JavaScript description</p>   
+      <p> <h3>  </h3> </p>
+      <p> Skills </p>   
     </div>
 
     <div class  = "article column3">
-      <p> <h3> World Wide Web </h3> </p>
-      <p> WWW description</p>
+      <p> <h3>  </h3> </p>
+      <p> </p>
     </div>
   </div>
 
